[gd_scene load_steps=10 format=3 uid="uid://bequalop3acw4"]

[ext_resource type="Texture2D" uid="uid://dl6aoxle61geu" path="res://assets/Textures/curtains_placeholder.png" id="1_6udes"]
[ext_resource type="Script" uid="uid://b76io5fh0osbb" path="res://curtain.gd" id="2_o5bxk"]
[ext_resource type="PackedScene" uid="uid://2o6nvgitwxxc" path="res://curtain_ui.tscn" id="3_fgb46"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1rrhv"]
albedo_texture = ExtResource("1_6udes")
metallic = 1.0
roughness = 0.58

[sub_resource type="QuadMesh" id="QuadMesh_jolj8"]

[sub_resource type="QuadMesh" id="QuadMesh_xxgf6"]
size = Vector2(0.2, 0.1)

[sub_resource type="ViewportTexture" id="ViewportTexture_y4f30"]
viewport_path = NodePath("GUI/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iuee5"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_y4f30")

[sub_resource type="BoxShape3D" id="BoxShape3D_y4f30"]
size = Vector3(1, 1, 0.0791016)

[node name="Curtain" type="MeshInstance3D"]
material_override = SubResource("StandardMaterial3D_1rrhv")
mesh = SubResource("QuadMesh_jolj8")
script = ExtResource("2_o5bxk")

[node name="GUI" type="Node3D" parent="."]

[node name="SubViewport" type="SubViewport" parent="GUI"]
size = Vector2i(1024, 512)

[node name="UI" parent="GUI/SubViewport" instance=ExtResource("3_fgb46")]
unique_name_in_owner = true

[node name="Quad" type="MeshInstance3D" parent="GUI"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.42175, 0.0071266)
mesh = SubResource("QuadMesh_xxgf6")
surface_material_override/0 = SubResource("StandardMaterial3D_iuee5")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_y4f30")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
